fixed navbar not showing transition bug

--- a/final/public/stylesheets/inputProduction.css
+++ b/final/public/stylesheets/inputProduction.css
@@ -30,7 +30,7 @@ button {
   padding: 10px;
 }
 
-.hide {
+.hideControl {
   display: none;
 }
 
